--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 />
   <link type="text/css" rel="stylesheet" href="css/reset.css">
   <link type="text/css" rel="stylesheet" href="css/style.css">
-  
+  <script src="https://kit.fontawesome.com/fa0a0d5fbb.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <div id="wrap">
@@ -19,7 +19,7 @@
       <div class="inner">
       <h1><a href="">logo</a></h1>
       <ul>
-        <li><a href="sub_01.html">부산민원</a></li>
+        <li><a href="sub_01.html" target="_blank">부산민원</a></li>
         <li><a href="#">부산소식</a></li>
         <li><a href="#">정보공개</a></li>
         <li><a href="#">통합예약</a></li>
@@ -200,7 +200,16 @@
       <p>Copyright@Buaan Metropolitan City. All rights reserved.</p>
     </div>
    </div>
-   <a href="#" class="top">Top</a>
+   <div class="top">
+     <ul>
+       <li><a href="#"><i class="fas fa-comment-dots"></i><span>카톡상담</span>
+        </a></li>
+       <li><a href="#"><i class="fas fa-headphones-alt"></i><span>전화상담</span></a></li>
+       <li><a href="#"><i class="fas fa-map-marker-alt"></i><span>오시는 길</span></a></li>
+       <li><a href="#" class="last"><i class="fas fa-arrow-up"></i><span>TOP</span></a></li>
+
+     </ul>
+   </div>
   </footer>
   <script src="js/jquery-3.2.1.min.js"></script>
   <script src="js/swiper-bundle.min.js"></script>
