--- a/sub_01.html
+++ b/sub_01.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>BUSANCITY HALL</title>
   <!-- <script>
   //   $(function){
   //     $('li#btn img').on('click', function(){
@@ -14,6 +14,7 @@
                  -->
   <link type="text/css" rel="stylesheet" href="css/style.css">
   <link type="text/css" rel="stylesheet" href="css/reset.css">
+  <script src="https://kit.fontawesome.com/fa0a0d5fbb.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <div id="wrap">
@@ -118,6 +119,15 @@
          <p>Copyright@Buaan Metropolitan City. All rights reserved.</p>
        </div>
       </div>
-      <a href="#" class="top">Top</a>
+      <div class="top">
+        <ul>
+          <li><a href="#"><i class="fas fa-comment-dots"></i><span>카톡상담</span>
+           </a></li>
+          <li><a href="#"><i class="fas fa-headphones-alt"></i><span>전화상담</span></a></li>
+          <li><a href="#"><i class="fas fa-map-marker-alt"></i><span>오시는 길</span></a></li>
+          <li><a href="#" class="last"><i class="fas fa-arrow-up"></i><span>TOP</span></a></li>
+   
+        </ul>
+      </div>
      </footer>
   </div><!--#wrap-->
