--- a/index.html
+++ b/index.html
@@ -92,34 +92,34 @@
             <span>체크카드자동<br>결제가능</span>
             <span>소득공제<br>30%</span>
             <span>캐시백10%</span></p>
-        <a href="#">가입하고 혜택받기</a>
+        <a href="#"><i class="fas fa-search-plus"></i><span>가입하고 혜택받기</span></a>
         </li>
         <li>
-          <a href="#">사전예약하러 가기</a>
+          <a href="#"><i class="fas fa-search-plus"></i><span>사전예약하러 가기</span></a>
         </li>
         <li>
           <p class="txt03"> 아동 돌봄서비스</p>
-          <a href="#">동구 여성인력개발센터</a>
+          <a href="#"><i class="fas fa-search-plus"></i><span>동구 여성인력개발센터</span></a>
         </li>
         <li>
           <p class="txt04">온라인으로 확정일자를 받으세요</p>
           <p class="txt05">계약체결 후 30일 이내 신고</p>
-          <a href="#">주택임대차 계약 신고</a>
+          <a href="#"><i class="fas fa-search-plus"></i><span>주택임대차 계약 신고</span></a>
         </li>
         <li>
           <p class="txt06">우리 동네 세금 고민해결사<br> <span>마을 세무사</span></p>
-          <a href="#">마을세무사 이용하러 가기</a>
+          <a href="#"><i class="fas fa-search-plus"></i><span>마을세무사 이용하러 가기</span></a>
         </li>
         <li>
           <p class="txt07">임신출산에 힘이 되는<br> 지원</p>
-          <a href="#">신청하러 가기</a>
+          <a href="#"><i class="fas fa-search-plus"></i><span>신청하러 가기</span></a>
         </li>
         <li>
-          <a href="#">전통시장 10%할인</a>
+          <a href="#"><i class="fas fa-search-plus"></i><span>전통시장 10%할인</span></a>
         </li>
         <li>
           <p class="txt08">수돗물 먹는 실태조사</p>
-          <a href="#">수돗물 먹는 실태조사</a>
+          <a href="#"><i class="fas fa-search-plus"></i><span>수돗물 먹는 실태조사</span></a>
         </li>
       </ul>
       <a href="#" class="more">더보기</a>
@@ -201,7 +201,7 @@
     </div>
    </div>
    <div class="top">
-     <ul>
+     <ul class="f_top">
        <li><a href="#"><i class="fas fa-comment-dots"></i><span>카톡상담</span>
         </a></li>
        <li><a href="#"><i class="fas fa-headphones-alt"></i><span>전화상담</span></a></li>
