--- a/sub_01.html
+++ b/sub_01.html
@@ -15,12 +15,13 @@
   <link type="text/css" rel="stylesheet" href="css/style.css">
   <link type="text/css" rel="stylesheet" href="css/reset.css">
   <script src="https://kit.fontawesome.com/fa0a0d5fbb.js" crossorigin="anonymous"></script>
+  
 </head>
 <body>
   <div id="wrap">
     <header>
       <div class="inner">
-      <h1><a href="">logo</a></h1>
+      <h1><a href="index.html" target="_blank">logo</a></h1>
       <ul>
         <li><a href="#">부산민원</a></li>
         <li><a href="#">부산소식</a></li>
@@ -34,7 +35,7 @@
       </div><!--.search-->
       </div><!--.inner-->
     </header>
-    <nav>
+    <nav class="sub_nav">
       <div class="inner">
         <ul>
           <li><a href="#">홈</a></li>
@@ -45,7 +46,7 @@
     </nav>
     <div class="sub_contents">
       <div class="inner">
-        <h2>부산 선셋 투어</h2>
+        <h2 class="subh">부산 선셋 투어</h2>
         <div class="img">
           <div class="bar">
             <ul>
@@ -59,14 +60,7 @@
       </div>
     </div><!--sub_contents-->
 
-    <!-- <div>
-      <ul>
-      <li><i class="fas fa-headphones-alt" style="--fa-primary-color: lightseagreen; --fa-secondary-color: linen; --fa-secondary-opacity: 1.0;"></i></li>
-      <li><i class="fas fa-bell"></i></li>
-      <li><i class="fas fa-comments"></i></li>
-      <li><i class="fas fa-phone-square-alt "></i></li>
-     </ul>
-    </div> -->
+    
     <div class="sub_list">
       <div class="inner">
       <ul class="sub_txt">
@@ -120,7 +114,7 @@
        </div>
       </div>
       <div class="top">
-        <ul>
+        <ul class="f_top">
           <li><a href="#"><i class="fas fa-comment-dots"></i><span>카톡상담</span>
            </a></li>
           <li><a href="#"><i class="fas fa-headphones-alt"></i><span>전화상담</span></a></li>
